--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "url": "https://github.com/GrafSoul/react-chrome-ext/issues"
   },
   "homepage": "https://github.com/GrafSoul/react-chrome-ext#readme",
-  "dependencies": {},
+  "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "fontsource-roboto": "^4.0.0"
+  },
   "devDependencies": {
-   "@types/chrome": "^0.0.178",
+    "@types/chrome": "^0.0.178",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "clean-webpack-plugin": "^4.0.0",
