--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/GrafSoul/react-chrome-ext#readme",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "fontsource-roboto": "^4.0.0"
   },
   "devDependencies": {
